--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@netlify/next": "^1.3.1",
     "abortcontroller-polyfill": "^1.7.5",
     "faunadb": "^4.7.1",
+    "graphql": "^16.6.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "eslint": "8.25.0",
